added pointscales endpoint and tests
